# comelit-cuchipandy

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  hacs.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  release.yml  validate.yml
custom_components/comelit_intercom_local/: auth.py  door.py  event.py  manifest.json
custom_components/comelit_man/: __init__.py  auth.py  button.py  camera.py  camera_utils.py  channels.py  client.py  config_flow.py  config_reader.py  const.py  coordinator.py  ctpp.py  diagnostics.py  door.py  entity.py  event.py  exceptions.py  icons.json  manifest.json  models.py  placeholder.py  protocol.py  push.py  repairs.py  rtp_receiver.py  rtsp_server.py  strings.json  token.py  video_call.py  vip_listener.py
custom_components/comelit_man/translations/: en.json
custom_components/comelit_man/www/: comelit-doorbell-card.js  (+1 more)
memory/: comelit_man_audit.md  comelit_man_backlog.md
tests/: conftest.py  test_auth.py  test_button.py  test_camera.py  test_camera_utils.py  test_channels.py  test_client.py  test_config_flow_extra.py  test_config_reader.py  test_coordinator.py  test_coverage_extras.py  test_ctpp.py  test_diagnostics_repairs.py  test_door.py  test_door_flow.py  test_event_entity.py  test_ha_component.py  test_integration.py  test_models_exceptions.py  test_protocol.py  test_push.py  test_rtp_receiver.py  test_rtsp_probe.py  test_rtsp_server.py  test_token.py  test_video_call.py  test_video_flow_integration.py  test_video_minimal.py  test_video_signaling.py  test_vip_listener.py
