[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "LOG", "RUF", "TC", "PERF", "C90", "S"]
ignore = [
  "E501",      # line-length — project uses 120-char lines
  "S101",      # assert — used as precondition guards in flow-protection code
  "S105",      # hardcoded-password-string — token/constant false positives
  "S106",      # hardcoded-password-func-arg — same
  "TC001",     # typing-only-first-party-import — HA imports used at runtime
  "TC002",     # typing-only-third-party-import — same
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/"]
